--- a/static/style.css
+++ b/static/style.css
@@ -884,7 +884,7 @@ footer .copyright {
     margin-bottom: 5rem;
 }
 
-#gallery .title-text-2 {
+.gallery-intro-text {
     display: none;
 }
 
